--- a/env/requirements.yaml
+++ b/env/requirements.yaml
@@ -1,5 +1,5 @@
 dependencies:
 - name: theglue-addons-storage
   version: 0.1.0
-  repository: http://chartmuseum.jenkins-x.io
+  repository: http://jenkins-x-chartmuseum:8080
 
